# dask-sas-reader

./: .gitignore  Pipfile  README.md  requirements.txt  setup.cfg
tests/data/: trades.csv
