[metadata]
name = dask_sas_reader
version = 0.1.0
author_email = information@mgmt-tech.org
url = https://github.com/IMTorgOpenDataTools/dask-sas-reader
description = Read SAS files into a Python Dask DataFrame.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    build
    dask
    pyreadstat